samples/_failures_safe/1761555652_582985_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a617db6.c: In function ‘main’:
./samples/SAFE/__tmp_3a617db6.c:151:5: error: expected declaration or statement at end of input
  151 |     add_edge(&graph, 4, 3, 2);
      |     ^~~~~~~~
